Removing logo.js for now, effect is fugly with new UV mappings :'( Added new wiki page

--- a/about.html
+++ b/about.html
@@ -377,7 +377,7 @@ void main() {
 }
   </script>
   <script src="/dist/L.js"></script>
-  <script src="/dist/logo.js"></script>
+  <!-- script(src='/dist/logo.js')-->
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
