--- a/games/ocean_scene.html
+++ b/games/ocean_scene.html
@@ -363,7 +363,7 @@ void main() {
 }
   </script>
   <script src="/dist/L.js"></script>
-  <script src="/dist/logo.js"></script>
+  <!-- script(src='/dist/logo.js')-->
   <script src="/dist/ocean_scene.js"></script>
   <script>
     // Facebook Like Button.
