--- a/games/sound.html
+++ b/games/sound.html
@@ -364,7 +364,7 @@ void main() {
 }
   </script>
   <script src="/dist/L.js"></script>
-  <script src="/dist/logo.js"></script>
+  <!-- script(src='/dist/logo.js')-->
   <script src="/dist/sound.js"></script>
   <script>
     // Facebook Like Button.
