--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ void main() {
 }
   </script>
   <script src="/dist/L.js"></script>
-  <script src="/dist/logo.js"></script>
+  <!-- script(src='/dist/logo.js')-->
   <script src="/dist/hero.js"></script>
   <script>
     // Facebook Like Button.
