--- a/wiki/index.html
+++ b/wiki/index.html
@@ -26,10 +26,16 @@
           <li>
             <h3>Games (in order of development)</h3>
             <ul>
-              <li><a href="/wiki/games--epoch-exordium.html">Epoch Exordium</a></li>
-              <li><a href="/wiki/games--airship-academy.html">Airship Academy</a></li>
-              <li><a href="/wiki/games--mmo.html">MMO</a></li>
-              <li><a href="/wiki/games--fall-of-the-elx.html">Fall of the Elx</a></li>
+              <li><a href="/wiki/epoch-exordium.html">Epoch Exordium</a></li>
+              <li><a href="/wiki/airship-academy.html">Airship Academy</a></li>
+              <li><a href="/wiki/mmo.html">MMO</a></li>
+              <li><a href="/wiki/fall-of-the-elx.html">Fall of the Elx</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3>Lore, locations and mythology</h3>
+            <ul>
+              <li><a href="/wiki/langenium.html">Langenium (mineral)</a></li>
             </ul>
           </li>
           <li>
@@ -38,15 +44,18 @@
               <li>
                 <h3>Characters</h3>
                 <ul>
-                  <li><a href="/wiki/characters--werp.html">WERP</a></li>
+                  <li><a href="/wiki/werp.html">WERP</a></li>
                 </ul>
               </li>
-              <li><a href="/wiki/storylines--2077.html">2077</a></li>
-              <li><a href="/wiki/storylines--2099.html">2099</a></li>
-              <li><a href="/wiki/storylines--2299.html">2299</a></li>
+              <li><a href="/wiki/2077.html">2077</a></li>
+              <li><a href="/wiki/2099.html">2099</a>
+                <ul>
+                  <li><a href="/wiki/technology_of_2099.html">Technology of 2099</a></li>
+                </ul>
+              </li>
+              <li><a href="/wiki/2299.html">2299</a></li>
             </ul>
           </li>
-          <li><a href="/wiki/technology_of_2099.html">Technology of 2099</a></li>
         </ul>
       </div>
     </div>
@@ -384,7 +393,7 @@ void main() {
 }
   </script>
   <script src="/dist/L.js"></script>
-  <script src="/dist/logo.js"></script>
+  <!-- script(src='/dist/logo.js')-->
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
