--- a/wiki/langenium.html
+++ b/wiki/langenium.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Character Test | Game Demos | Langenium
+    <title>Langenium (mineral) | Wiki | Langenium
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
@@ -21,9 +21,41 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h3>Character Test</h3>
-        <p>Epoch Exordium's protagonist is Jack. This is a Live2D and Three.JS integration test to demonstrate the use of multiple Live2D canvases to simulate multiple sides of the 2D character in 3D space.</p>
-        <div class="character_test"></div>
+        <h2>Langenium (mineral)</h2><p>Langenium is a crystalline mineral created by algae living on the planet Ibidan. </p>
+
+<h4>Background</h4>
+
+<p>The mineral Langenium is a naturally occuring photovoltaic crystal and semiconductor. Occurring in various sizes from dust particles to megaton structures in the ocean, the quartz-like mineral contains an internal cell structure of bacteria suspended in oil, interconnected by network of conductive compounds (different grades of Langenium result from the metals present). </p>
+
+<p>The bacteria absorb sunlight and can be motivated to emit electrical current through the conductive pathways of the crystal by cutting them off from UV. Once depleted, the bacteria go into suspended animation until recharged with sunlight.</p>
+
+<h4>Interaction and presence in nature</h4>
+
+<p>The bacteria Helios Jupiterus Immortalis only occurs within the Langenium crystal and can only live inside the conductive oil they are created in by the algae, Silva Deus Sanguine. The red and green algae consume a variety of materials in the ocean, using sunlight and the oceans&#39; condition itself as an energy source. </p>
+
+<p>The algae travels between the ocean surface to charge up with solar energy and sinking down to the depths to form a geodesic rock that will sink to a certain depth and remain their due to the greater density of the water. Various sizes of Langenium are produced within depending on the density and efficiency of this process. Completed crystals are released into the ocean currents and the algae return to the ocean surface to refuel.</p>
+
+<h4>History</h4>
+
+<p>The algae were bio-engineered by the Elx as part of a project to create a new habitable solar system. The goal was to effortlessly create a new home far away from known space. The Elx were hunted by the Krahm, driven off their homeworld this was their last grand effort to rebuild their race. They haven&#39;t been heard from in millions of years.</p>
+
+<p>As a semiconductor and sustainable battery, the mineral was to be used as the primary fuel for a clean fusion bomb. The Elx designed a bomb that would created its own bubble of accelerated time that would have grown into a yellow star and various Earth-like planets within several minutes. A huge volume of water was synthesized in space and suspended around a star, essentially creating a planet. It was given a breathable atmosphere for convenience of scientists and engineers, as well as a gesture of goodwill to other species.</p>
+
+<p>The planet Ibidan is discovered and settled by the human race in 2099. As the sun sets on the planet, the oceans shimmer with electrical surges and discharges, not unlike lightning. The humans start out by recharging their batteries using the ocean currents, literally.</p>
+
+<p>After a few months of settlement, the mineral is discovered and purposed into the first Langenium solar panel. Within a year, it replaces all other sources of power due to its staggering efficiency, its storage capacity exceeding even the best manufactured ones and abundance in the ocean an obvious choice.</p>
+
+<h4>Classification of variants</h4>
+
+<p>The characteristics required to classify a mineral as Langenium are:
+- the crystalline structure of the &#39;scaffold&#39; molecules
+- cells of Helios Jupiterus Immortalis bacteria, suspended in a translucent highly conductive oil
+- conductive pathways connecting the crystal structure to the cells</p>
+
+<p>The quality of Langenium is therefore dictated by the three core properties above. 
+- A denser and more efficient crystal structure leads to more densely packed bacterial cells. 
+- The bacteria can be born with variations in their RNA, increasing their sensitivity to certain frequencies of light, increasing their storage capacity and/or increasing their electrical output. 
+- Higher quality and purer conductors made of platinum and gold result in better crystals than variations of the former with copper and boron.</p>
       </div>
     </div>
   </body>
@@ -361,7 +393,6 @@ void main() {
   </script>
   <script src="/dist/L.js"></script>
   <!-- script(src='/dist/logo.js')-->
-  <script src="/dist/character_test.js"></script>
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
