--- a/wiki/technology_of_2099.html
+++ b/wiki/technology_of_2099.html
@@ -418,7 +418,7 @@ void main() {
 }
   </script>
   <script src="/dist/L.js"></script>
-  <script src="/dist/logo.js"></script>
+  <!-- script(src='/dist/logo.js')-->
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
