--- a/gallery/concept-art.html
+++ b/gallery/concept-art.html
@@ -380,7 +380,7 @@ void main() {
 }
   </script>
   <script src="/dist/L.js"></script>
-  <script src="/dist/logo.js"></script>
+  <!-- script(src='/dist/logo.js')-->
   <script>
     // Facebook Like Button.
     (function(d, s, id) {
