--- a/wiki/epoch-exordium.html
+++ b/wiki/epoch-exordium.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Storylines | Wiki | Langenium
+    <title>Epoch Exordium | Wiki | Langenium
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
@@ -21,8 +21,63 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h2>Storylines</h2>
-        <h3>Epoch Exordium</h3><h2>Prologue for Epoch Exordium</h2>
+        <h2>Epoch Exordium</h2>
+        <ul>
+          <li><a href="/wiki/epoch-exordium-gameplay.html">Gameplay</a></li>
+        </ul><h2>About Epoch Exordium</h2>
+
+<p>An adventure RPG with resource management elements from RTS.</p>
+
+<p>This tells the story of human explorers of a network of space stations that were built by automated drones at the direction of an AI.</p>
+
+<h3>Purpose</h3>
+
+<p>This mini-game is mainly for me to build up game mechanics and functionality in the engine.</p>
+
+<p>Epoch Exordium leads into the world of 2099. It serves as a transitionary piece from today&#39;s world into the Earth that will fall at the start of Langenium proper.</p>
+
+<p>Exordium is an element developed by humans, under WERP&#39;s instruction. It&#39;s named for being a new beginning for humanity.</p>
+
+<p>The game&#39;s story is the Epoch of Exordium and the prologue for how WERP took control of the human race and brought them to Ibidan &quot;an Epoch Exordium&quot;, introduction to the main story :)</p>
+
+<h3>Storyline</h3>
+
+<h4>Prologue</h4>
+
+<p>In the early 21st century, the human race was in a crisis. The oil had run dry and food was scarce due to dangerous and unpredictable weather patterns. </p>
+
+<p>A computer was made, unlike any other. The Web Energy Research Project (WERP) sought to create a human brain that could solve the energy crisis and ensure the survival of the human race. The brain was given a home in the sky and hidden from all humans, knowing that it&#39;s mission would keep it in check - create clean energy and ensure the human race&#39;s survival.</p>
+
+<p>WERP came online in 2039 and revolutionized the fields of astrophyics, biology, chemistry, quantum physics and mathematics. It did all this by exploring and cataloging the internet and then producing models and prototypes for the humans to learn from.</p>
+
+<p>By 2040, all forms of private transportation became illegal. Unrest, crime and rioting ensued, however no solution came about. WERP was put to the task, and determined that humanity must create a new element for a new age - Exordium.</p>
+
+<p>Exordium would capture gamma rays in a crystalline structure and then release it in the form of electricity. It seemed perfect, unfortunately there was no way to make it.</p>
+
+<ol><li>Construction drones designed and built by WERP were rocketed onto the moon. The drones harvested raw materials, surviving off cosmic radiation and trace gases they eventually began to replicate and left the moon for the asteroid belt, and beyond. The human race was completely unaware of all of this and lived on, as well as they could.</li></ol>
+
+<p>For 31 years, WERP sat in silence. As time had passed, astronomers had observed structures being built all around the solar system. There were theories - that WERP was hard at work, piloting each and every single drone remotely and thus limiting it&#39;s ability to work on anything else or even communicate.</p>
+
+<ol><li>On an ordinary day, inboxes all around the world were flooded with one message - &quot;It&#39;s ready. Come forth.&quot;. There was a lot of confusion, but some brave souls decided to head for the stars to find see if the answer could be found - somewhere out there in space.</li></ol>
+
+<h4>Epoch Exordium Story</h4>
+
+<p>Project Humanity (PH) is founded by the UN in 2077. The organization was given the same mandate as WERP - create clean energy and protect the human race. PH was told that they would assemble teams from all around the world who would go out into space and find out what WERP had built and why.</p>
+
+<p>Engineers, scientists, passionate sci-fi nerds and entrepreneurs were brought up to the delapitated International Space Station for a debriefing and deployment. It turns out that WERP had developed a form of public transportation - a network of ballistic capsule cannons and nets that would allow cargo and people to move safely between structures.</p>
+
+<h4>SPOILERIFIC EPIC CONCLUSION OF STORY NOTES</h4>
+
+<p>WERP is using the network as part of his long term plan to destroy the Earth in 23 years and relocate the humans to Ibidan.</p>
+
+<p>The stations could be used to both determine the trajectory of the wormhole and a way to create the ideal conditions for it.</p>
+
+<h5>Ideas</h5>
+
+<ul><li>Detonating the stations in a certain order could create some kind of gravitational disturbance that rips the Earth-&gt;Ibidan wormhole open.<ul><li>Twin wormholes open - one between Earth and the surface of the sun and one between Earth and Ibidan</li><li>Wormhole is &#39;shifting&#39; and in the process of stabilizing it&#39;s simply superheated plasma/exotic particles entering the Earth&#39;s atmosphere that causes the explosion</li></ul></li><li>The stations could funnel laser/maser/kinetic energy into the Earth in a way that rips the wormhole open<ul><li>The station is at the L3 point to Earth and the &quot;poof&quot; of the wormhole being established between these locations caused a massive solar flare to hit the Earth&#39;s atmosphere</li></ul></li></ul>
+
+<p>Due to the player&#39;s having their brains harvested at the end of Epoch Exordium - there could be moments in Langenium MMO where this past character contacts the same players Langenium character via cryptic clues and messages. This could be in their own past and resonance with recent events or direct things like receiving a random reward from that character as an inheritance. Maybe completing different optional objectives in Epoch Exordium could create greater rewards and longer term missions that appear - maybe even discovering more about what WERP did overall, as part of your own story in both games?</p>
+        <h3>Storyline</h3><h2>Prologue for Epoch Exordium</h2>
 
 <p>In 2076, the human race seems to be at a breaking point. There has been no oil for 50 years. Coal is rare. Nuclear fission ended up hitting the mainstream as a result, however an Earthquake in.Europe caused a disaster at several plants. Their only.option was to &#39;decontaminate&#39; the area with special hydrogen bombs that sucked the radiation into space, however this pushes those regions.into a permanent unlivable winter. This causes extremes to occur in the Earth climate; whatever isn&#39;t frozen turns.into a harsh desert. The decision to freeze the irradiated sites was proposed by Dr Olivia Bishop and carried out by scientists from CERN, despite several military organizations objecting to their role being usurped by the intellectual elite.</p>
 
@@ -35,49 +90,6 @@
 <p>By 2099, the organization was largely discredited due to being blamed for the transformed weather system, embezzlement and corruption. Many corporations and governments opt to cease funding and by the time Phoenix Day hits, the organization is severely crippled by continued attacks from politicians and business leaders who accuse it of being a waste of money and having leaders who are fueled by paranoid delusions of &#39;doomsday prophets&#39; of things like meteor strikes, solar flares and catastrophic climate change. Dr Olivia Bishop and her team, in particular, are the subject of a lot of outrage as their decision that saved Europe is seen as an avoidable and catastrophic mistake. Several conspiracy theorists believe it was a move to convince the public to create PH in the first place, so that &quot;the scientist fat cats can steal our hard earned money and live it up and conduct ridiculous and expensive experiments to feed their own narcissism and do nothing to enrich the human race&quot;</p>
 
 <p>The power structure of Project Humanity is based around a mixed appointed and elected board of scientists known as the Council. Councillors are either select politicians or &#39;department heads&#39; of scientific units which can then be broken down into teams. May is only a team leader.</p>
-        <h3>Airship Academy</h3><p>In 1931 a German engineer, Dr Bruno Lange, developed a photo cell using silver selenide in place of copper oxide. In 2043, a deep space radar telescope discovers a new element in the accretion disc of a black hole - langenium. Through studying it&#39;s activity, scientists believed that it could perfectly convert surrounding light into usable electric energy. With no hope of retrieving even a sample, humanity searched for other avenues.</p>
-
-<p>in 2099, the human race is growing desperate for a new source of energy. An AI called WERP (Web Energy Research Protocol) is created in order to research and develop a new form of power generation and deployed into the world wide web. It is hoped that it will be able to come up with a solution using the sum of human knowledge.</p>
-
-<p>One day,WERP determined that Earth was a sub-optimal homeworld due to knowing about the langenium research in the SETI archives.Using a gravity manipulating device, it was able to draw a solar flare close to Earth. The intention was to move humanity permanently and swiftly. WERP used the energy in the atmosphere to open a wormhole to Ibidan and left clues for the humans to find it.The solar flare released radiation that began to boil the planet. The humans eventually discovered the wormhole, sent a probe and couldn&#39;t believe their luck - an ocean planet with life waited on the other side.</p>
-
-<p>They had an exit, but no way to move the entire human race in the time available. Aerial drones had been successful in reaching the other side and continuing on, so they boarded everyone onto planes. Military craft, private vehicles and commercial planes. This was all a part of WERP&#39;s plan.</p>
-
-<p>A series of hydrogen bombs were detonated on both ends of the wormhole, increasing it&#39;s size, but landing a final blow to Earth. As soon as the radiation cleared and the upper atmosphere lit up, the humans went in.</p>
-
-<p>On Ibidan, it was chaos. The velocity had propelled a few planes so hard they crashed. Most survived. With no way of knowing where to go, they flew in every direction with the fuel they had and hoped.</p>
-
-<p>After the first few days on Ibidan, May Jung Lee&#39;s group gets split off from the military and VIP escorts due to wanting to help some stranded refugees. The scientists and refugees live together in peace.</p>
-
-<p>Before coming to Ibidan Sir Francis Cross was the Minister for Defence of England. Today he is the lone survivor of his private jet. He is an injured, dying old man with little hope. His butler android, controlled by WERP, approaches him and offers to repair his ship and fly him back to the escort, however he must pledge himself to the android. The android threatens to stop his heart via his digital pace maker if he refuses anyway. Facing death, Sir Francis Cross complies.</p>
-
-<p>Sir Francis Cross eventually regroups with the VIP escort and leads the construction of a new British empire, on orders from WERP.</p>
-
-<p>Tor Dadak is Alazaar&#39;s best friend and a famous and respected combat pilot. He relies on body implants to live due to injuries from many wars. WERP can remotely see and hear everything Tor does, and communicates with him via consoles and computers around him. It threatens that it will take over his body and make him kill his wife and children if he does not do everything it wants.</p>
-
-<p>WERP instructs Tor Dadak to build a nation called Al-Alazaar, much to Alazaar&#39;s dismay about using his name (he was humble). The people call themselves Za&#39;ar or Za&#39;aran.</p>
-
-<p>On orders from WERP, Tor Dadak stages a revolution against the scientists for supposedly experimenting on children and banishes them to the ocean. May Jung Lee is allowed to stay but decides to leave to lead her team. That is the last time they see each other, she is pregnant.</p>
-
-<p>It finally looks like peace might be possible. Prince Nicholas of Winthrom met Ana Jung-Lee at the Airship Academy and they are on their way to being wed.</p>
-
-<p>It is the wedding day. Alazaar and May re-unite for the first time in 29 years and celebrate their love on a balcony at Winthrom castle. The wedding venue explodes killing the bride, groom and guests.</p>
-
-<p>The world goes into a state of cold war over the incident. Sir Francis Scott pushes the belief that assassin&#39;s from Al-Alazaar were responsible. Likewise, Za&#39;ar people are convinced by Tor Dadak that members of the Winthrom elite were responsible. The Union press and citizens believe that neither side could be responsible as everyone stood to lose a lot from the events, however they have no proof and so choose to further recluse their domain. May begins to suspect that there is another presence on Ibidan and goes off to find it.</p>
-
-<p>Alazaar does his own investigation into the insurgency at the wedding. It is revealed that both elite pirates and royal snipers were involved in the incident. This investigation leads him to Sir Francis Cross and then Tor Dadak, he kills them both.</p>
-
-<p>In his last moments, Tor confesses that he has been receiving instructions from a Union AI. Alazaar believes him and passes this on but May doesn&#39;t believe him and continues her search for aliens. He goes in to where the parliament supposedly sits, and finds the room is empty. No one had been here in years.</p>
-
-<p>He descends through the lower levels of The Union home base until eventually finding WERP&#39;s lair. WERP kills him.</p>
-
-<p>Alazaar&#39;s death recalls May from her search. She investigates and confronts WERP. WERP explains that it had found the aliens she was searching for when they first arrived. The alien presence that has popped up here and there are way more advanced and could easily wipe us out if we were considered an overt threat. WERP created the factions in order to keep the human population smaller and well fortified and took advantage of the conflict as a means to research and develop new technologies. The humans could still create innovations that WERP couldn&#39;t imagine.... because it&#39;s a computer.</p>
-
-<p>After hearing the story, Maydestroys WERP, however the entire Union faction requires it to be in place to function. Having lost her daughter and her love, she uploads herself to the central computer.</p>
-
-<p>The world never recovered from the state of cold war. As an immortal AI advising the Union parliament, May sought to bring peace to the world however the revelations about WERP, Tor and Francis only lead to a further state of distrust between Al-Alazaar and Winthrom. The Union now plays the role of peacekeeper, using their vast technological superiority and trade agreements as a bargaining chip to prevent violence from escalating.</p>
-
-<p>Aliens scouts have also begun attacking remote human outposts and it seems likely that they are systematically learning about humans before proceeding with a formulated plan to attack. No one is able to agree on how to handle the aliens.</p>
       </div>
     </div>
   </body>
