--- a/wiki/fall-of-the-elx.html
+++ b/wiki/fall-of-the-elx.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Storylines | Wiki | Langenium
+    <title>Fall of the Elx | Wiki | Langenium
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
@@ -21,63 +21,19 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h2>Storylines</h2>
-        <h3>Epoch Exordium</h3><h2>Prologue for Epoch Exordium</h2>
+        <h2>Fall of the Elx</h2><p>A tribute to Lemmings and Worms, the Elx play the part of the Lemmings who wander about and get killed. The Krahm are the Worms, hunting the Elx and trying to eliminate them before they can evacuate.</p>
 
-<p>In 2076, the human race seems to be at a breaking point. There has been no oil for 50 years. Coal is rare. Nuclear fission ended up hitting the mainstream as a result, however an Earthquake in.Europe caused a disaster at several plants. Their only.option was to &#39;decontaminate&#39; the area with special hydrogen bombs that sucked the radiation into space, however this pushes those regions.into a permanent unlivable winter. This causes extremes to occur in the Earth climate; whatever isn&#39;t frozen turns.into a harsh desert. The decision to freeze the irradiated sites was proposed by Dr Olivia Bishop and carried out by scientists from CERN, despite several military organizations objecting to their role being usurped by the intellectual elite.</p>
+<p>The Elx can&#39;t attack, but they can set off environmental traps and position themselves in ways that will force the Krahm into risky and potentially losing choices. The Elx also have the option of completing certain puzzles and collecting items on the map. </p>
 
-<p>Project Humanity is setup in 2077 as a UN failsafe/first response unit for any potential threats to the continued existence of the human race.</p>
+<p>The Krahm&#39;s motivation is to achieve maximum destruction with their kills. It&#39;s not enough to kill an Elx, they have several bonus targets and weapons strewn across the map.</p>
 
-<p>WERP is an early PH initiative in 2077 to develop accessible and abundant clean energy sources. This is in direct response to the disaster that devastated Europe. </p>
+<p>This mini-game will tell the story of the Elx and how they lost their homeworld. The story will be split up into chapters.</p>
 
-<p>May is a research biologist who acts as project leader. She has been trying to develop artificial biomass based machinery for power and manufacturing, as a possible alternative to metal/circuit based tech.</p>
+<p>A prelude will allude to the &#39;epic&#39; storyline that ties in with why the Elx were attacked - the big bad told the Krahm to do it.</p>
 
-<p>By 2099, the organization was largely discredited due to being blamed for the transformed weather system, embezzlement and corruption. Many corporations and governments opt to cease funding and by the time Phoenix Day hits, the organization is severely crippled by continued attacks from politicians and business leaders who accuse it of being a waste of money and having leaders who are fueled by paranoid delusions of &#39;doomsday prophets&#39; of things like meteor strikes, solar flares and catastrophic climate change. Dr Olivia Bishop and her team, in particular, are the subject of a lot of outrage as their decision that saved Europe is seen as an avoidable and catastrophic mistake. Several conspiracy theorists believe it was a move to convince the public to create PH in the first place, so that &quot;the scientist fat cats can steal our hard earned money and live it up and conduct ridiculous and expensive experiments to feed their own narcissism and do nothing to enrich the human race&quot;</p>
+<h3>Purpose</h3>
 
-<p>The power structure of Project Humanity is based around a mixed appointed and elected board of scientists known as the Council. Councillors are either select politicians or &#39;department heads&#39; of scientific units which can then be broken down into teams. May is only a team leader.</p>
-        <h3>Airship Academy</h3><p>In 1931 a German engineer, Dr Bruno Lange, developed a photo cell using silver selenide in place of copper oxide. In 2043, a deep space radar telescope discovers a new element in the accretion disc of a black hole - langenium. Through studying it&#39;s activity, scientists believed that it could perfectly convert surrounding light into usable electric energy. With no hope of retrieving even a sample, humanity searched for other avenues.</p>
-
-<p>in 2099, the human race is growing desperate for a new source of energy. An AI called WERP (Web Energy Research Protocol) is created in order to research and develop a new form of power generation and deployed into the world wide web. It is hoped that it will be able to come up with a solution using the sum of human knowledge.</p>
-
-<p>One day,WERP determined that Earth was a sub-optimal homeworld due to knowing about the langenium research in the SETI archives.Using a gravity manipulating device, it was able to draw a solar flare close to Earth. The intention was to move humanity permanently and swiftly. WERP used the energy in the atmosphere to open a wormhole to Ibidan and left clues for the humans to find it.The solar flare released radiation that began to boil the planet. The humans eventually discovered the wormhole, sent a probe and couldn&#39;t believe their luck - an ocean planet with life waited on the other side.</p>
-
-<p>They had an exit, but no way to move the entire human race in the time available. Aerial drones had been successful in reaching the other side and continuing on, so they boarded everyone onto planes. Military craft, private vehicles and commercial planes. This was all a part of WERP&#39;s plan.</p>
-
-<p>A series of hydrogen bombs were detonated on both ends of the wormhole, increasing it&#39;s size, but landing a final blow to Earth. As soon as the radiation cleared and the upper atmosphere lit up, the humans went in.</p>
-
-<p>On Ibidan, it was chaos. The velocity had propelled a few planes so hard they crashed. Most survived. With no way of knowing where to go, they flew in every direction with the fuel they had and hoped.</p>
-
-<p>After the first few days on Ibidan, May Jung Lee&#39;s group gets split off from the military and VIP escorts due to wanting to help some stranded refugees. The scientists and refugees live together in peace.</p>
-
-<p>Before coming to Ibidan Sir Francis Cross was the Minister for Defence of England. Today he is the lone survivor of his private jet. He is an injured, dying old man with little hope. His butler android, controlled by WERP, approaches him and offers to repair his ship and fly him back to the escort, however he must pledge himself to the android. The android threatens to stop his heart via his digital pace maker if he refuses anyway. Facing death, Sir Francis Cross complies.</p>
-
-<p>Sir Francis Cross eventually regroups with the VIP escort and leads the construction of a new British empire, on orders from WERP.</p>
-
-<p>Tor Dadak is Alazaar&#39;s best friend and a famous and respected combat pilot. He relies on body implants to live due to injuries from many wars. WERP can remotely see and hear everything Tor does, and communicates with him via consoles and computers around him. It threatens that it will take over his body and make him kill his wife and children if he does not do everything it wants.</p>
-
-<p>WERP instructs Tor Dadak to build a nation called Al-Alazaar, much to Alazaar&#39;s dismay about using his name (he was humble). The people call themselves Za&#39;ar or Za&#39;aran.</p>
-
-<p>On orders from WERP, Tor Dadak stages a revolution against the scientists for supposedly experimenting on children and banishes them to the ocean. May Jung Lee is allowed to stay but decides to leave to lead her team. That is the last time they see each other, she is pregnant.</p>
-
-<p>It finally looks like peace might be possible. Prince Nicholas of Winthrom met Ana Jung-Lee at the Airship Academy and they are on their way to being wed.</p>
-
-<p>It is the wedding day. Alazaar and May re-unite for the first time in 29 years and celebrate their love on a balcony at Winthrom castle. The wedding venue explodes killing the bride, groom and guests.</p>
-
-<p>The world goes into a state of cold war over the incident. Sir Francis Scott pushes the belief that assassin&#39;s from Al-Alazaar were responsible. Likewise, Za&#39;ar people are convinced by Tor Dadak that members of the Winthrom elite were responsible. The Union press and citizens believe that neither side could be responsible as everyone stood to lose a lot from the events, however they have no proof and so choose to further recluse their domain. May begins to suspect that there is another presence on Ibidan and goes off to find it.</p>
-
-<p>Alazaar does his own investigation into the insurgency at the wedding. It is revealed that both elite pirates and royal snipers were involved in the incident. This investigation leads him to Sir Francis Cross and then Tor Dadak, he kills them both.</p>
-
-<p>In his last moments, Tor confesses that he has been receiving instructions from a Union AI. Alazaar believes him and passes this on but May doesn&#39;t believe him and continues her search for aliens. He goes in to where the parliament supposedly sits, and finds the room is empty. No one had been here in years.</p>
-
-<p>He descends through the lower levels of The Union home base until eventually finding WERP&#39;s lair. WERP kills him.</p>
-
-<p>Alazaar&#39;s death recalls May from her search. She investigates and confronts WERP. WERP explains that it had found the aliens she was searching for when they first arrived. The alien presence that has popped up here and there are way more advanced and could easily wipe us out if we were considered an overt threat. WERP created the factions in order to keep the human population smaller and well fortified and took advantage of the conflict as a means to research and develop new technologies. The humans could still create innovations that WERP couldn&#39;t imagine.... because it&#39;s a computer.</p>
-
-<p>After hearing the story, Maydestroys WERP, however the entire Union faction requires it to be in place to function. Having lost her daughter and her love, she uploads herself to the central computer.</p>
-
-<p>The world never recovered from the state of cold war. As an immortal AI advising the Union parliament, May sought to bring peace to the world however the revelations about WERP, Tor and Francis only lead to a further state of distrust between Al-Alazaar and Winthrom. The Union now plays the role of peacekeeper, using their vast technological superiority and trade agreements as a bargaining chip to prevent violence from escalating.</p>
-
-<p>Aliens scouts have also begun attacking remote human outposts and it seems likely that they are systematically learning about humans before proceeding with a formulated plan to attack. No one is able to agree on how to handle the aliens.</p>
+<p>If executed well, this is fucking gold. It will also give me the ability to write up mechanics, item trees, skills, user db, etc, etc.</p>
       </div>
     </div>
   </body>
