--- a/wiki/mmo.html
+++ b/wiki/mmo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Storylines | Wiki | Langenium
+    <title>MMO | Wiki | Langenium
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
@@ -21,63 +21,19 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h2>Storylines</h2>
-        <h3>Epoch Exordium</h3><h2>Prologue for Epoch Exordium</h2>
+        <h2>MMO</h2><ul><li>Ships can&#39;t attack a city. It&#39;s size is to scale. The city defenses will rain on your parade no matter how powerful you are. Any missile or attack will be countered with targetted lightning shots and anti-missile missiles. Everyone has to land in the appropriate spot and can then walk out of the airdock like a normal person.
+Ship mode:</li><li>PvP battles</li><li>Explore the skies and fight flying monsters above the clouds and oceans YARR</li><li>Cyberpunk airships blowing each other out of the sky.</li><li>Cloud formations that lead to various places like floating fortresses and shit.</li><li>Use avatar to explore marketplace areas in mountaintops, sky cities, etc.</li><li>Final Fantasy style battle system on the ground, uses same skills as ship abilities for local combat</li><li>Workshop where your avatar can walk around your airship and talk to the crew</li><li>Hire NPC crew to assist in ship to ship combat and operations. NPC&#39;s can become permanent employees of a player and be hired by other players for cash. Players can bid for an NPC&#39;s loyalty by increasing their salary, depending on the skills of the NPC this may be worth it.</li><li>Some quests will require the use of crew to complete a quest in different ways:
+---- Option 1: Player can go into dungeon while airship circles or is docked. The airship then provides support by attacking parts of a facility and opening up corridors, taking out key defences of a facility, providing chaos to distract guards, etc.
+---- Option 2: Player can remain in ship while NPC&#39;s go in to perform mission objectives. PvE monsters will always focus their aggression on the player character as this is the ship&#39;s captain. 
+---- Option 3: Everyone is docked. Players send NPC&#39;s out into dungeon to cripple defences, etc.
+---- Option 4: Entire facility is blown out of the sky. This takes a really long time. There is potential for rewards by salvaging from the wreckage that falls into the ocean or just crumbles around but depending on which territory you&#39;re in, forces for the local faction will come after you for destroying a location. </li></ul>
+        <h3>Storyline</h3><p>The Langenium MMO is set in 2299 with the planet Ibidan as the main setting and starting location. </p>
 
-<p>In 2076, the human race seems to be at a breaking point. There has been no oil for 50 years. Coal is rare. Nuclear fission ended up hitting the mainstream as a result, however an Earthquake in.Europe caused a disaster at several plants. Their only.option was to &#39;decontaminate&#39; the area with special hydrogen bombs that sucked the radiation into space, however this pushes those regions.into a permanent unlivable winter. This causes extremes to occur in the Earth climate; whatever isn&#39;t frozen turns.into a harsh desert. The decision to freeze the irradiated sites was proposed by Dr Olivia Bishop and carried out by scientists from CERN, despite several military organizations objecting to their role being usurped by the intellectual elite.</p>
+<h3>Arcs</h3>
 
-<p>Project Humanity is setup in 2077 as a UN failsafe/first response unit for any potential threats to the continued existence of the human race.</p>
+<p>The main arc planned is for players to engage in standard PvE and PvP fare while a larger narrative unfolds that changes the world around them. Initially Krahm scout ships will appear here and there, leading up to full blown infiltration units and flanking squadrons.</p>
 
-<p>WERP is an early PH initiative in 2077 to develop accessible and abundant clean energy sources. This is in direct response to the disaster that devastated Europe. </p>
-
-<p>May is a research biologist who acts as project leader. She has been trying to develop artificial biomass based machinery for power and manufacturing, as a possible alternative to metal/circuit based tech.</p>
-
-<p>By 2099, the organization was largely discredited due to being blamed for the transformed weather system, embezzlement and corruption. Many corporations and governments opt to cease funding and by the time Phoenix Day hits, the organization is severely crippled by continued attacks from politicians and business leaders who accuse it of being a waste of money and having leaders who are fueled by paranoid delusions of &#39;doomsday prophets&#39; of things like meteor strikes, solar flares and catastrophic climate change. Dr Olivia Bishop and her team, in particular, are the subject of a lot of outrage as their decision that saved Europe is seen as an avoidable and catastrophic mistake. Several conspiracy theorists believe it was a move to convince the public to create PH in the first place, so that &quot;the scientist fat cats can steal our hard earned money and live it up and conduct ridiculous and expensive experiments to feed their own narcissism and do nothing to enrich the human race&quot;</p>
-
-<p>The power structure of Project Humanity is based around a mixed appointed and elected board of scientists known as the Council. Councillors are either select politicians or &#39;department heads&#39; of scientific units which can then be broken down into teams. May is only a team leader.</p>
-        <h3>Airship Academy</h3><p>In 1931 a German engineer, Dr Bruno Lange, developed a photo cell using silver selenide in place of copper oxide. In 2043, a deep space radar telescope discovers a new element in the accretion disc of a black hole - langenium. Through studying it&#39;s activity, scientists believed that it could perfectly convert surrounding light into usable electric energy. With no hope of retrieving even a sample, humanity searched for other avenues.</p>
-
-<p>in 2099, the human race is growing desperate for a new source of energy. An AI called WERP (Web Energy Research Protocol) is created in order to research and develop a new form of power generation and deployed into the world wide web. It is hoped that it will be able to come up with a solution using the sum of human knowledge.</p>
-
-<p>One day,WERP determined that Earth was a sub-optimal homeworld due to knowing about the langenium research in the SETI archives.Using a gravity manipulating device, it was able to draw a solar flare close to Earth. The intention was to move humanity permanently and swiftly. WERP used the energy in the atmosphere to open a wormhole to Ibidan and left clues for the humans to find it.The solar flare released radiation that began to boil the planet. The humans eventually discovered the wormhole, sent a probe and couldn&#39;t believe their luck - an ocean planet with life waited on the other side.</p>
-
-<p>They had an exit, but no way to move the entire human race in the time available. Aerial drones had been successful in reaching the other side and continuing on, so they boarded everyone onto planes. Military craft, private vehicles and commercial planes. This was all a part of WERP&#39;s plan.</p>
-
-<p>A series of hydrogen bombs were detonated on both ends of the wormhole, increasing it&#39;s size, but landing a final blow to Earth. As soon as the radiation cleared and the upper atmosphere lit up, the humans went in.</p>
-
-<p>On Ibidan, it was chaos. The velocity had propelled a few planes so hard they crashed. Most survived. With no way of knowing where to go, they flew in every direction with the fuel they had and hoped.</p>
-
-<p>After the first few days on Ibidan, May Jung Lee&#39;s group gets split off from the military and VIP escorts due to wanting to help some stranded refugees. The scientists and refugees live together in peace.</p>
-
-<p>Before coming to Ibidan Sir Francis Cross was the Minister for Defence of England. Today he is the lone survivor of his private jet. He is an injured, dying old man with little hope. His butler android, controlled by WERP, approaches him and offers to repair his ship and fly him back to the escort, however he must pledge himself to the android. The android threatens to stop his heart via his digital pace maker if he refuses anyway. Facing death, Sir Francis Cross complies.</p>
-
-<p>Sir Francis Cross eventually regroups with the VIP escort and leads the construction of a new British empire, on orders from WERP.</p>
-
-<p>Tor Dadak is Alazaar&#39;s best friend and a famous and respected combat pilot. He relies on body implants to live due to injuries from many wars. WERP can remotely see and hear everything Tor does, and communicates with him via consoles and computers around him. It threatens that it will take over his body and make him kill his wife and children if he does not do everything it wants.</p>
-
-<p>WERP instructs Tor Dadak to build a nation called Al-Alazaar, much to Alazaar&#39;s dismay about using his name (he was humble). The people call themselves Za&#39;ar or Za&#39;aran.</p>
-
-<p>On orders from WERP, Tor Dadak stages a revolution against the scientists for supposedly experimenting on children and banishes them to the ocean. May Jung Lee is allowed to stay but decides to leave to lead her team. That is the last time they see each other, she is pregnant.</p>
-
-<p>It finally looks like peace might be possible. Prince Nicholas of Winthrom met Ana Jung-Lee at the Airship Academy and they are on their way to being wed.</p>
-
-<p>It is the wedding day. Alazaar and May re-unite for the first time in 29 years and celebrate their love on a balcony at Winthrom castle. The wedding venue explodes killing the bride, groom and guests.</p>
-
-<p>The world goes into a state of cold war over the incident. Sir Francis Scott pushes the belief that assassin&#39;s from Al-Alazaar were responsible. Likewise, Za&#39;ar people are convinced by Tor Dadak that members of the Winthrom elite were responsible. The Union press and citizens believe that neither side could be responsible as everyone stood to lose a lot from the events, however they have no proof and so choose to further recluse their domain. May begins to suspect that there is another presence on Ibidan and goes off to find it.</p>
-
-<p>Alazaar does his own investigation into the insurgency at the wedding. It is revealed that both elite pirates and royal snipers were involved in the incident. This investigation leads him to Sir Francis Cross and then Tor Dadak, he kills them both.</p>
-
-<p>In his last moments, Tor confesses that he has been receiving instructions from a Union AI. Alazaar believes him and passes this on but May doesn&#39;t believe him and continues her search for aliens. He goes in to where the parliament supposedly sits, and finds the room is empty. No one had been here in years.</p>
-
-<p>He descends through the lower levels of The Union home base until eventually finding WERP&#39;s lair. WERP kills him.</p>
-
-<p>Alazaar&#39;s death recalls May from her search. She investigates and confronts WERP. WERP explains that it had found the aliens she was searching for when they first arrived. The alien presence that has popped up here and there are way more advanced and could easily wipe us out if we were considered an overt threat. WERP created the factions in order to keep the human population smaller and well fortified and took advantage of the conflict as a means to research and develop new technologies. The humans could still create innovations that WERP couldn&#39;t imagine.... because it&#39;s a computer.</p>
-
-<p>After hearing the story, Maydestroys WERP, however the entire Union faction requires it to be in place to function. Having lost her daughter and her love, she uploads herself to the central computer.</p>
-
-<p>The world never recovered from the state of cold war. As an immortal AI advising the Union parliament, May sought to bring peace to the world however the revelations about WERP, Tor and Francis only lead to a further state of distrust between Al-Alazaar and Winthrom. The Union now plays the role of peacekeeper, using their vast technological superiority and trade agreements as a bargaining chip to prevent violence from escalating.</p>
-
-<p>Aliens scouts have also begun attacking remote human outposts and it seems likely that they are systematically learning about humans before proceeding with a formulated plan to attack. No one is able to agree on how to handle the aliens.</p>
+<p>Eventually the reason for Earth&#39;s destruction will be tied back to the events in Epoch Exordium. As an MMO is an open ended game, an ending to the entire narrative has been written that accommodates for the need for more storylines to unfold later but also satisfyingly ties up everything planned in every other games (with the exception perhaps of <a href="/wiki/fall-of-the-elx.html">Fall of the Elx</a>). </p>
       </div>
     </div>
   </body>
