Adding all remaining wiki pages

--- a/wiki/lux-atlas.html
+++ b/wiki/lux-atlas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Wiki | Langenium
+    <title>Lux Atlas | Wiki | Langenium
     </title>
     <link href="/vendor/Semantic-UI/dist/semantic.min.css" rel="stylesheet">
     <link href="/dist/styles.css" rel="stylesheet">
@@ -21,110 +21,9 @@
         <div class="fb-like" data-href="https://www.facebook.com/Langenium/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
       </header>
       <div class="row">
-        <h2>Welcome to the Langenium Wiki</h2>
-        <ul>
-          <li>
-            <h3>Games (in order of development)</h3>
-            <ul>
-              <li><a href="/wiki/epoch-exordium.html">Epoch Exordium</a></li>
-              <li><a href="/wiki/airship-academy.html">Airship Academy</a></li>
-              <li><a href="/wiki/mmo.html">MMO</a></li>
-              <li><a href="/wiki/fall-of-the-elx.html">Fall of the Elx</a></li>
-            </ul>
-          </li>
-          <li>
-            <h3>Lore, locations and mythology</h3>
-            <ul>
-              <li><a href="/wiki/langenium.html">Langenium (mineral)</a></li>
-            </ul>
-          </li>
-          <li>
-            <h3>Storylines</h3>
-            <ul>
-              <li>
-                <h3>Sentient races</h3>
-                <p>There are two categories for life - Astral and Cosmic. Astral life forms are biological and generally require a breathable atmosphere and other conditions to survive. Cosmic life forms inhabit either the vastness of space or a realm beyond normal space time.</p>
-                <h4>Cosmic</h4>
-                <ul>
-                  <li><a href="/wiki/cellocher.html">Cellocher</a></li>
-                  <li><a href="/wiki/drak.html">Drak</a></li>
-                  <li><a href="/wiki/host.html">Host</a></li>
-                  <li><a href="/wiki/maya.html">Maya</a></li>
-                  <li><a href="/wiki/robot.html">Robot</a></li>
-                  <li><a href="/wiki/sinnis.html">Sinnis</a></li>
-                  <li><a href="/wiki/werp.html">WERP  </a></li>
-                </ul>
-                <h4>Astral</h4>
-                <ul>
-                  <li><a href="/wiki/elx.html">Elx</a></li>
-                  <li><a href="/wiki/ganetti.html">Ganetti</a></li>
-                  <li><a href="/wiki/hircus-human.html">Hircus (Human)</a></li>
-                  <li><a href="/wiki/krahm.html">Krahm</a></li>
-                  <li><a href="/wiki/lupus.html">Lupus</a></li>
-                  <li><a href="/wiki/mantis.html">Mantis</a></li>
-                  <li><a href="/wiki/mon-kis.html">Mon-kis</a></li>
-                  <li><a href="/wiki/tigris.html">Tigris</a></li>
-                  <li><a href="/wiki/torton.html">Torton</a></li>
-                </ul>
-              </li>
-              <li>
-                <h3>Planned Arcs</h3>
-                <p>The arcs below are broken up into different dimensional realities that are connected to the ones in the games, essentially serving as origin stories and world building sources for background details.</p>
-                <p>The first three won't be covered by any games and are purely mythological, however some characters will appear in the games are deities and ancient aliens etc.</p>
-                <ul>
-                  <li><a href="/wiki/end-of-love.html">End of Love</a>
-                    <p>The story of the beginning of time</p>
-                  </li>
-                  <li><a href="/wiki/tree-of-life.html">Tree of Life</a>
-                    <p>The restoration of life to the universe</p>
-                  </li>
-                  <li><a href="/wiki/atlantis-v-olympus.html">Atlantis vs Olympus</a>
-                    <p>The restraint of evil and triumph of good</p>
-                  </li>
-                  <li><a href="/wiki/lux-atlas.html">Lux Atlas</a>
-                    <p>The creation of the infinite universe</p>
-                  </li>
-                  <li><a href="/wiki/phoenix-day.html">Phoenix Day</a>
-                    <p>The destruction of Earth and migration to Ibidan</p>
-                  </li>
-                  <li><a href="/wiki/his-story.html">His Story</a>
-                    <p>The endgame of the entire narrative, the story of the Horned God and his pantheon of avatars across time and space.  </p>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <h3>Significant Years in History</h3>
-                <p>The historical timeline of Langenium is told from the perspective of the human race from Earth and so while there are some notes on stories for various species, I plan to back everything against the standard calendar we follow.</p>
-                <ul>
-                  <li><a href="/wiki/2077.html">2077</a>
-                    <ul>
-                      <li><a href="/wiki/2077.html#events">Events</a></li>
-                      <li><a href="/wiki/2077.html#locations">Locations</a></li>
-                      <li><a href="/wiki/2077.html#people">People</a></li>
-                      <li><a href="/wiki/2077.html#technology">Technology</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="/wiki/2099.html">2099</a>
-                    <ul>
-                      <li><a href="/wiki/2099.html#events">Events</a></li>
-                      <li><a href="/wiki/2099.html#locations">Locations</a></li>
-                      <li><a href="/wiki/2099.html#people">People</a></li>
-                      <li><a href="/wiki/2099.html#technology">Technology</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="/wiki/2299.html">2299</a>
-                    <ul>
-                      <li><a href="/wiki/2299.html#events">Events</a></li>
-                      <li><a href="/wiki/2299.html#locations">Locations</a></li>
-                      <li><a href="/wiki/2299.html#people">People</a></li>
-                      <li><a href="/wiki/2299.html#technology">Technology</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <h2>Lux Atlas</h2><p>This is the story of our universe and where Earth really came from and what the Elx are really up to.</p>
+
+<p>TBA</p>
       </div>
     </div>
   </body>
